test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-30 18:27:17.987216

